# lexorank

./: README.md  mypy.ini  pyproject.toml  pytest.ini
scripts/: format.sh  lint.sh  test.sh
src/lexorank/: lexorank.py
tests/: test_leorank.py
