[tool.poetry]
name = "lexorank"
version = "1.0.0"
description = "lexorank is a ranking system introduced by Atlassian JIRA."
authors = ["Gilles Wetzel <gilles@wetzel.lu>"]
packages = [
    { include = "lexorank", from = "src" }
]
[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.950"
black = "^22.3.0"
autoflake = "^1.4"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
