[tool.poetry]
name = "lexorank"
version = "1.0.1"
description = "lexorank is a ranking system introduced by Atlassian JIRA."
authors = ["Gilles Wetzel <gilles@wetzel.lu>"]
keywords = ["lexorank", "ranking"]
packages = [
    { include = "lexorank", from = "src" }
]
readme = "README.md"
repository = "https://github.com/wetgi/lexorank"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.7.0"
autoflake = "^1.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
